--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div>
     <div class="z-0 animate__animated animate__fadeIn">
       <video class="w-full h-auto" autoplay loop muted playsinline style="mix-blend-mode: darken;">
-        <source src="media/homepage_bg.webm">
+        <source src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/homepage_bg.webm">
       </video>
     </div>
 
