--- a/byme.html
+++ b/byme.html
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div>
-    <img src="https://pic1.imgdb.cn/item/678a18d8d0e0a243d4f534c9.png">
+    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover.png">
   </div>
 
   <!-- 导航 -->
@@ -81,25 +81,25 @@
   <!-- 先看亮点 -->
   <div class="bg-[#F5F7FA] px-[96px]">
     <div class="flex">
-      <div data-image="media/Byme/01.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/01.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/card_01.png">
       </div>
-      <div data-image="media/Byme/02.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/02.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/card_02.png">
       </div>
-      <div data-image="media/Byme/03.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/03.png"
         class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/card_03.png">
       </div>
     </div>
     <div class="flex">
-      <div data-image="media/Byme/04.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/04.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/card_04.png">
       </div>
-      <div data-image="media/Byme/05.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/05.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/card_05.png">
       </div>
@@ -115,25 +115,25 @@
   </div>
   <div class=" bg-[#F5F7FA] px-[96px]">
     <div class="flex">
-      <div data-image="media/Byme/06.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/06.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/cardB_01.png">
       </div>
-      <div data-image="media/Byme/07.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/07.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/cardB_02.png">
       </div>
-      <div data-image="media/Byme/08.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/08.png"
         class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/cardB_03.png">
       </div>
     </div>
     <div class="flex">
-      <div data-image="media/Byme/09.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/09.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/cardB_04.png">
       </div>
-      <div data-image="media/Byme/10.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/10.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="media/Byme/cardB_05.png">
       </div>
