--- a/byme.html
+++ b/byme.html
@@ -83,25 +83,25 @@
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/01.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_01.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_01.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/02.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_02.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_02.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/03.png"
         class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_03.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_03.png">
       </div>
     </div>
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/04.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_04.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_04.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/05.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/card_05.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_05.png">
       </div>
       <div class="w-[560px]">
       </div>
@@ -117,25 +117,25 @@
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/06.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/cardB_01.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_01.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/07.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/cardB_02.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_02.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/08.png"
         class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/cardB_03.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_03.png">
       </div>
     </div>
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/09.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/cardB_04.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_04.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/10.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="media/Byme/cardB_05.png">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_05.png">
       </div>
       <div class="w-[560px]">
       </div>
@@ -247,15 +247,15 @@
   </div>
   <div class="mb-[96px] mx-[96px] flex space-x-[96px]">
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://pic1.imgdb.cn/item/678a2046d0e0a243d4f537d9.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research1.png">
       <p class="text-[#808080]">超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://pic1.imgdb.cn/item/678a2046d0e0a243d4f537da.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research2.png">
       <p class="text-[#808080]">涵盖约40款产品的竞品分析文档。我负责撰写了产品核心业务设计分析的部分。</p>
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://pic1.imgdb.cn/item/678a2047d0e0a243d4f537db.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research3.png">
       <p class="text-[#808080]">针对公司现运营产品展开了数据分析工作。基于重点功能的数据提出了设计建议。</p>
     </div>
   </div>
@@ -264,20 +264,20 @@
     </p>
   </div>
   <div class="bg-[#F5F7FA] px-[96px] pb-[96px]">
-    <img src="https://pic1.imgdb.cn/item/678a20ccd0e0a243d4f53812.png">
+    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/idea.png">
   </div>
   <div class="bg-white pt-[96px] pb-[48px] px-[96px]">
     <p class="w-3/4 text-[28px] PF-m text-[#808080]">在独立执行具体需求的过程中，我高度重视效率与质量的平衡。例如，我在流程、规范和对齐环节中做出了以下努力： </p>
   </div>
   <div class="mb-[96px] mx-[96px] flex space-x-[32px]">
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://pic1.imgdb.cn/item/678a20b3d0e0a243d4f537fc.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research1.png">
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://pic1.imgdb.cn/item/678a20b3d0e0a243d4f537fd.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research2.png">
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://pic1.imgdb.cn/item/678a20b4d0e0a243d4f537fe.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research3.png">
     </div>
   </div>
 
