--- a/byme.html
+++ b/byme.html
@@ -48,7 +48,7 @@
   <!-- Cover -->
   <div class="bg-white h-[270px] flex justify-between items-center mx-[96px]">
     <div class="animate__animated animate__fadeInLeft">
-      <img src="media/byme_logo.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_logo.png">
     </div>
     <div>
       <p class="text-[40px] PF-sm animate__animated animate__fadeInRight">心动来电、视频匹配、热聊房间，<br>
@@ -271,13 +271,13 @@
   </div>
   <div class="mb-[96px] mx-[96px] flex space-x-[32px]">
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research1.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/doc1.png">
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research2.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/doc2.png">
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research3.png">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/doc3.png">
     </div>
   </div>
 
