--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>My Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="font.css">
 </head>
 
 <body>
   <!-- Navbar -->
   <div>
-    <nav class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30 animate__animated animate__fadeInDown">
+    <nav
+      class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30 animate__animated animate__fadeInDown">
       <div class="flex justify-normal w-1/3 space-x-8">
         <a href="#works"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
@@ -45,28 +47,28 @@
     </div>
 
     <div class="flex justify-center mt-[-176px] space-x-[72px] animate__animated animate__fadeInUp">
-        <a href="#works">
-          <button
-            class="z-30 flex items-center justify-center w-[340px] h-[96px] rounded-full border border-black/20 hover:bg-black hover:text-white hover:border-0 relative">
-            <p class="text-[32px] absolute left-[36px]">Explore More</p>
-            <img src="media/arrow_03.png"
-              class="absolute right-[36px] transition-opacity duration-300 group-hover:opacity-0">
-            <img src="media/arrow_04.png"
-              class="absolute right-[36px] hidden group-hover:block transition-opacity duration-300">
-          </button>
-        </a>
-        <a href="#works">
-            <button
-              class="z-30 flex flex-row items-center w-[340px] h-[96px] rounded-full border bg-black transition-all duration-500 ease-in-out transform hover:scale-110">
-              <p class="px-16 text-[32px] text-white">My resume</p>
-              <img src="media/arrow_06.png"
-                class="absolute right-[36px] transition-opacity duration-300 group-hover:opacity-0">
-            </button>
-          </a>
-      </div>
-      <div class="h-[80px]">
-      </div>
+      <a href="#works">
+        <button
+          class="z-30 flex items-center justify-center w-[340px] h-[96px] rounded-full border border-black/20 hover:bg-black hover:text-white hover:border-0 relative">
+          <p class="text-[32px] absolute left-[36px]">Explore More</p>
+          <img src="media/arrow_03.png"
+            class="absolute right-[36px] transition-opacity duration-300 group-hover:opacity-0">
+          <img src="media/arrow_04.png"
+            class="absolute right-[36px] hidden group-hover:block transition-opacity duration-300">
+        </button>
+      </a>
+      <a href="#works">
+        <button
+          class="z-30 flex flex-row items-center w-[340px] h-[96px] rounded-full border bg-black transition-all duration-500 ease-in-out transform hover:scale-110">
+          <p class="px-16 text-[32px] text-white">My resume</p>
+          <img src="media/arrow_06.png"
+            class="absolute right-[36px] transition-opacity duration-300 group-hover:opacity-0">
+        </button>
+      </a>
     </div>
+    <div class="h-[80px]">
+    </div>
+  </div>
 
 
   <!-- Works Section -->
@@ -78,21 +80,11 @@
           class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
           <a href="byme.html">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="media/cover_byme.png">
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_byme.png">
           </a>
-          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_byme.png">
-            <p class="font-semibold">Byme</p>
-          </div>
-          <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">心动来电，陌生社交新体验。</p>
-          <div class="group">
-            <img class="absolute top-[11px] right-[5px]" src="media/corner.png">
-            <a href="byme.html">
-              <img class="absolute top-[12px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
-                src="media/arrow_02.png">
-              <img class="absolute top-[12px] right-[6px] hidden group-hover:block transition-opacity duration-300"
-                src="media/arrow_02_hover.png">
-            </a>
+            <p class="PF-sm">Byme</p>
           </div>
         </div>
       </div>
@@ -102,71 +94,11 @@
           class="bg-[#F5FAFD] pt-[12px] pb-[6px] pr-[12px] pl-[6px] relative ease-in-out transform duration-300 transition-all">
           <a href="qume.html">
             <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
-              src="media/cover_qume.png">
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_qume.png">
           </a>
-          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_qume.png">
-            <p class="text-white font-semibold">Qume</p>
-          </div>
-          <p class="absolute top-[104px] left-[52px] text-[18px] text-white">Cue U & Me.</p>
-          <div class="group">
-            <img class="absolute top-[11px] right-[11px]" src="media/corner.png">
-            <a href="qume.html">
-              <img class="absolute top-[12px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
-                src="media/arrow_02.png">
-              <img class="absolute top-[12px] right-[12px] hidden group-hover:block transition-opacity duration-300"
-                src="media/arrow_02_hover.png">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="flex bg-[#F5FAFD]">
-      <!-- gafalib -->
-      <div class="w-1/2 h-auto">
-        <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
-          <a href="gafalib.html">
-            <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
-              src="media/cover_gafalib.png">
-          </a>
-          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
-            <img src="media/logo_gafa.png">
-            <p class="text-white font-semibold">GAFALib</p>
-          </div>
-          <p class="absolute top-[104px] left-[52px] text-[18px] text-white">全新系统，崭新风貌。</p>
-          <div class="group">
-            <img class="absolute top-[5px] right-[5px]" src="media/corner.png">
-            <a href="gafalib.html">
-              <img class="absolute top-[6px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
-                src="media/arrow_02.png">
-              <img class="absolute top-[6px] right-[6px] hidden group-hover:block transition-opacity duration-300"
-                src="media/arrow_02_hover.png">
-            </a>
-          </div>
-        </div>
-      </div>
-      <!-- Timespon -->
-      <div class="w-1/2 h-auto">
-        <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pr-[12px] pl-[6px] relative ease-in-out transform duration-300 transition-all">
-          <a href="timespon.html">
-            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="media/cover_timespon.png">
-          </a>
-          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
-            <img src="media/logo_time.png">
-            <p class="font-semibold">Timespon</p>
-          </div>
-          <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">时间就像海绵里的水。</p>
-          <div class="group">
-            <img class="absolute top-[6px] right-[12px]" src="media/corner.png">
-            <a href="timespon.html">
-              <img class="absolute top-[6px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
-                src="media/arrow_02.png">
-              <img class="absolute top-[6px] right-[12px] hidden group-hover:block transition-opacity duration-300"
-                src="media/arrow_02_hover.png">
-            </a>
+            <p class="text-white PF-sm">Qume</p>
           </div>
         </div>
       </div>
@@ -177,41 +109,26 @@
         <div
           class="bg-[#F5FAFD] pt-[6px] pb-[40px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
           <a href="super.html">
-            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="media/cover_super.png">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_super.png">
           </a>
-          <div class="absolute top-[52px] left-[52px] text-[28px] flex justify-normal space-x-[8px]">
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_midea.png">
-            <p class="text-black font-semibold">SUPER UX Model</p>
-          </div>
-          <p class="absolute top-[104px] left-[52px] text-[18px] text-black/60">美的IoT产品-用户体验度量模型</p>
-          <div class="group">
-            <img class="absolute top-[6px] right-[6px]" src="media/corner.png">
-            <a href="super.html">
-              <img class="absolute top-[6px] right-[6px] transition-opacity duration-300 group-hover:opacity-0"
-                src="media/arrow_02.png">
-              <img class="absolute top-[6px] right-[6px] hidden group-hover:block transition-opacity duration-300"
-                src="media/arrow_02_hover.png">
-            </a>
+            <p class="text-white PF-sm">美的 · SUPER UX Model</p>
           </div>
         </div>
       </div>
-      <!-- gallery -->
+      <!-- gafalib -->
       <div class="w-1/2 h-auto">
         <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[40px] pr-[12px] pl-[6px] relative ease-in-out transform duration-300 transition-all">
-          <a href="timespon.html">
-            <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
-              src="media/cover_gallery.png">
+          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
+          <a href="gafalib.html">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_gafalib.png">
           </a>
-          <div class="group">
-            <img class="absolute top-[5px] right-[11px]" src="media/corner.png">
-            <a href="timespon.html">
-              <img class="absolute top-[6px] right-[12px] transition-opacity duration-300 group-hover:opacity-0"
-                src="media/arrow_02.png">
-              <img class="absolute top-[6px] right-[12px] hidden group-hover:block transition-opacity duration-300"
-                src="media/arrow_02_hover.png">
-            </a>
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_gafa.png">
+            <p class="text-black PF-sm">GAFALib</p>
           </div>
         </div>
       </div>
