--- a/byme.html
+++ b/byme.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Byme</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -13,7 +13,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
-<body>
+<body class="min-w-[1376px]">
     <!--进度条 -->
   <div id="progress-container" style="position: fixed; top: 0; left: 0; width: 100%; height: 5px; background-color: #F5F7FA; z-index: 9999; display: none;">
     <div id="progress-bar" style="height: 100%; width: 0; background-color: #7c7c7c;"></div>
@@ -26,9 +26,9 @@
         <a href="index.html"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
             WORKS</button></a>
-        <a href="#projects"
-          class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
-            GALLERY</button></a>
+            <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed" target="_blank"
+            class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
+              GALLERY</button></a>
       </div>
       <div class="flex justify-center w-1/3 h-auto">
         <a href="#works" class="relative block h-[64px] w-[280px]">
@@ -285,7 +285,7 @@
   <div class="bg-[#F5F7FA] text-[24px] PF-sm">
     <div class="flex justify-center p-[40px] text-[#808080]">
       <p>🎉感谢您看到这里！</p>
-      <a href="#works" class="text-[#1C8AFF] hover:underline ">点此浏览下一个项目：Qume。</a>
+      <a href="qume.html" target="_blank" class="text-[#1C8AFF] hover:underline ">点此浏览下一个项目：Qume。</a>
     </div>
   </div>
 
