--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Zack's Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="font.css">
 </head>
 
-<body>
+<body class="min-w-[1376px]">
   <!-- Navbar -->
   <div>
     <nav
@@ -19,7 +19,7 @@
         <a href="#works"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
             WORKS</button></a>
-        <a href="#projects"
+        <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed" target="_blank"
           class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
             GALLERY</button></a>
       </div>
@@ -31,7 +31,7 @@
         </a>
       </div>
       <div class="flex justify-end w-1/3">
-        <a href="#projects"
+        <a href="about.html" target="_blank"
           class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>👀
             About Me</button></a>
       </div>
@@ -107,7 +107,7 @@
       <!-- Midea -->
       <div class="w-1/2 h-auto">
         <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[40px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
+          class="bg-[#F5FAFD] pt-[6px] pb-[12px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
           <a href="super.html">
             <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_super.png">
@@ -129,6 +129,36 @@
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_gafa.png">
             <p class="text-black PF-sm">GAFALib</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="flex bg-[#F5FAFD]">
+      <!-- TimeSpon -->
+      <div class="w-1/2 h-auto cursor-not-allowed">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[40px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
+          <a>
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_timespon.png">
+          </a>
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_time.png">
+            <p class="text-black PF-sm">TimeSpon <p class="text-black PF-r opacity-30">(Coming soon...)</p></p>
+          </div>
+        </div>
+      </div>
+      <!-- compet -->
+      <div class="w-1/2 h-auto cursor-not-allowed">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
+          <a>
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_COMPET.png">
+          </a>
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/logo_compet.png">
+            <p class="text-black PF-sm">GAFALib <p class="text-black PF-r opacity-30">(Coming soon...)</p></p>
           </div>
         </div>
       </div>
