--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </a>
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_compet.png">
-            <p class="text-black PF-sm">GAFALib <p class="text-black PF-r opacity-30">(Coming soon...)</p></p>
+            <p class="text-black PF-sm">Compet <p class="text-black PF-r opacity-30">(Coming soon...)</p></p>
           </div>
         </div>
       </div>
