--- a/qume.html
+++ b/qume.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="flex justify-end w-1/3">
-                <a href="#projects"
+                <a href="about.html" target="_blank"
                     class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border-2 border-white/20 text-white hover:bg-white hover:text-black hover:border-0 transition-all duration-300 ease-in-out"><button>👀
                         About Me</button></a>
             </div>
