--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div class="flex justify-end w-1/3">
-                <a href="#projects"
+                <a href="about.html" target="_blank"
                     class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>👀
                         About Me</button></a>
             </div>
