--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
 
 <body class="min-w-[1376px]">
   <!-- Navbar -->
-  <div>
-    <nav
-      class="flex justify-between absolute top-0 left-0 w-full px-16 py-10 z-30 animate__animated animate__fadeInDown">
-      <div class="flex justify-normal w-1/3 space-x-8">
-        <a href="#works"
-          class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
-            WORKS</button></a>
-        <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed" target="_blank"
-          class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
-            GALLERY</button></a>
-      </div>
-      <div class="flex justify-center w-1/3 h-auto">
-        <a href="#works" class="relative block h-[64px] w-[280px]">
-          <div class="h-full bg-cover bg-center transition-all duration-500 ease-in-out transform hover:scale-110">
-            <img src="media/homepage_island_start.png">
-          </div>
-        </a>
-      </div>
-      <div class="flex justify-end w-1/3">
-        <a href="about.html" target="_blank"
-          class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>👀
-            About Me</button></a>
-      </div>
+  <div class="bg-[#F6FAFD]">
+    <nav class="flex justify-between w-full px-16 py-10 z-30 animate__animated animate__fadeInDown">
+        <div class="flex justify-normal w-1/3 space-x-8">
+            <a href="#works"
+                class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
+                    WORKS</button></a>
+            <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed"
+                target="_blank"
+                class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
+                    GALLERY</button></a>
+        </div>
+        <div class="flex justify-center w-1/3 h-auto">
+            <a href="#works" class="relative block h-[64px] w-[280px]">
+                <div
+                    class="h-full bg-cover bg-center transition-all duration-500 ease-in-out transform hover:scale-110">
+                    <img src="media/homepage_island_start.png">
+                </div>
+            </a>
+        </div>
+        <div class="flex justify-end w-1/3">
+          <a href="about.html" target="_blank"
+                class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>👀
+                    About Me</button></a>
+        </div>
     </nav>
-  </div>
+</div>
 
   <!-- Hero Section -->
   <div>
@@ -78,7 +79,7 @@
       <div class="w-1/2 h-auto">
         <div
           class="bg-[#F5FAFD] pt-[12px] pb-[6px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
-          <a href="byme.html">
+          <a href="byme.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_byme.png">
           </a>
@@ -92,7 +93,7 @@
       <div class="w-1/2 h-auto">
         <div
           class="bg-[#F5FAFD] pt-[12px] pb-[6px] pr-[12px] pl-[6px] relative ease-in-out transform duration-300 transition-all">
-          <a href="qume.html">
+          <a href="qume.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_qume.png">
           </a>
@@ -108,7 +109,7 @@
       <div class="w-1/2 h-auto">
         <div
           class="bg-[#F5FAFD] pt-[6px] pb-[12px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
-          <a href="super.html">
+          <a href="super.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-125 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_super.png">
           </a>
@@ -122,7 +123,7 @@
       <div class="w-1/2 h-auto">
         <div
           class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
-          <a href="gafalib.html">
+          <a href="gafalib.html" target="_blank">
             <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
               src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_gafalib.png">
           </a>
