--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
             <div class="flex space-x-[16px] items-center">
-                <a href="https://meia.me/course/170362" target="_blank"
-                    class="PF-sm text-black text-[32px] hover:underline">Click here to download my resume.<br>
+                <a
+                    class="cursor-not-allowed PF-sm text-black text-[32px] hover:underline">Click here to download my resume.<br>
                     单击此处下载简历。</a>
             </div>
             <p class="PF-r text-black/60 text-[24px]">I'm Zha Chengke (查成柯), you can also call me Zack. I am a UX/UI
