--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             class="absolute right-[36px] hidden group-hover:block transition-opacity duration-300">
         </button>
       </a>
-      <a href="#works">
+      <a>
         <button
-          class="z-30 flex flex-row items-center w-[340px] h-[96px] rounded-full border bg-black transition-all duration-500 ease-in-out transform hover:scale-110">
+          class="cursor-not-allowed z-30 flex flex-row items-center w-[340px] h-[96px] rounded-full border bg-black transition-all duration-500 ease-in-out transform hover:scale-110">
           <p class="px-16 text-[32px] text-white">My resume</p>
           <img src="media/arrow_06.png"
             class="absolute right-[36px] transition-opacity duration-300 group-hover:opacity-0">
