--- a/byme.html
+++ b/byme.html
@@ -14,11 +14,12 @@
 </head>
 
 <body class="min-w-[1376px]">
-    <!--进度条 -->
-  <div id="progress-container" style="position: fixed; top: 0; left: 0; width: 100%; height: 5px; background-color: #F5F7FA; z-index: 9999; display: none;">
+  <!--进度条 -->
+  <div id="progress-container"
+    style="position: fixed; top: 0; left: 0; width: 100%; height: 5px; background-color: #F5F7FA; z-index: 9999; display: none;">
     <div id="progress-bar" style="height: 100%; width: 0; background-color: #7c7c7c;"></div>
   </div>
-  
+
   <!-- Navbar -->
   <div>
     <nav class="flex justify-between w-full px-16 py-10 z-30 bg-[#F5F7FA] animate__animated animate__fadeInDown">
@@ -26,9 +27,10 @@
         <a href="index.html"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
             WORKS</button></a>
-            <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed" target="_blank"
-            class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
-              GALLERY</button></a>
+        <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed"
+          target="_blank"
+          class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
+            GALLERY</button></a>
       </div>
       <div class="flex justify-center w-1/3 h-auto">
         <a href="#works" class="relative block h-[64px] w-[280px]">
@@ -55,27 +57,181 @@
         从0到1设计差异化社交体验。</p>
     </div>
   </div>
+  <!-- Overview -->
+  <div class="flex bg-white h-[250px] justify-between px-[96px] animate__animated animate__fadeIn">
+    <div>
+      <p class="text-[32px] PF-sm">Role</p>
+      <p class="pt-[24px] text-[24px] PF-r text-black/60">UX/UI Design<br>
+        User Experience Measurement<br>
+        User Research</p>
+    </div>
+    <div>
+      <p class="text-[32px] PF-sm">Overview</p>
+      <p class="pt-[24px] text-[24px] PF-r text-black/60">Byme是一个以音视频社交玩法<br>
+        为主的APP，主要面向海外（东<br>
+        南亚、港澳台）用户。</p>
+    </div>
+    <div>
+      <p class="text-[32px] PF-sm">Keywords</p>
+      <p class="pt-[24px] text-[24px] PF-r text-black/60">Team: 迈越<br>
+        Tools: Sketch, Figma, Blender...<br>
+        Timeline: 2023.10 - 2024.3</p>
+    </div>
+  </div>
   <div>
     <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover.png">
+  </div>
+
+
+  <!-- 最后看看Byme诞生的故事 -->
+  <!-- 导航 -->
+  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
+    <p class="text-[48px] PF-sm pt-[64px]">项目背景。</p>
+  </div>
+  <div class=" bg-white px-[96px] pt-[96px] flex space-x-[36px]">
+    <div class="w-2/3">
+      <p class="w-full text-[48px] PF-sm colorful_title">身处竞争激烈的出海社交市场，我们如何精准定位体验问题，使产品脱颖而出？</p>
+    </div>
+  </div>
+  <div class="px-[96px] py-[56px]">
+    <p class="w-2/3 PF-m text-[24px] text-[#808080]">
+      我们针对东南亚、港澳台市场开展了数次市场和用户研究。这些研究持续了7天左右，我主要负责撰写公司现运营产品的体验报告等部分。<br><br>
+      <a class="text-black PF-sm hover:underline"
+        href="https://www.figma.com/proto/CenI7ayoWFui4v9SVl46TR/Miya-%E4%BD%93%E9%AA%8C%E8%AF%84%E4%BC%B0%E6%8A%A5%E5%91%8A?page-id=0%3A1&node-id=1-2&p=f&viewport=365%2C165%2C0.1&t=kX4VrNdOikHZ1mQH-1&scaling=contain&content-scaling=fixed"
+        target="_blank">💡您可以点此查看我负责撰写的体验报告。</a>
+  </div>
+  <div class="mb-[96px] mx-[96px] flex space-x-[96px]">
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research1.png">
+      <p class="text-[#808080]">超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
+    </div>
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research2.png">
+      <p class="text-[#808080]">涵盖约40款产品的竞品分析文档。我负责撰写了产品核心业务设计分析的部分。</p>
+    </div>
+    <div class="flex w-1/3 flex-col space-y-[24px]">
+      <a href="https://www.figma.com/proto/CenI7ayoWFui4v9SVl46TR/Miya-%E4%BD%93%E9%AA%8C%E8%AF%84%E4%BC%B0%E6%8A%A5%E5%91%8A?page-id=0%3A1&node-id=1-2&p=f&viewport=365%2C165%2C0.1&t=kX4VrNdOikHZ1mQH-1&scaling=contain&content-scaling=fixed"
+        target="_blank">
+        <img class="transition-all duration-500 ease-in-out transform hover:scale-110"
+          src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research3.png">
+      </a>
+      <p class="text-[#808080]">针对公司现运营产品展开了体验分析工作。基于重点功能的数据提出了设计建议。</p>
+    </div>
+  </div>
+  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
+    <p class="text-[48px] PF-sm pt-[64px]">研究结论。</p>
+  </div>
+  <div class=" bg-white px-[96px] pt-[96px] flex space-x-[36px]">
+    <div>
+      <p class="w-2/3 text-[48px] PF-sm colorful_title">研究结论包括四个关键问题。我们通过HMW法转译设计目的，并使用GSM模型指导体验设计策略：</p>
+    </div>
+  </div>
+  <div class="px-[96px] pb-[24px] pt-[56px]">
+    <p class="PF-m text-[24px] text-[#808080]">问题（Problem）</p>
+  </div>
+  <div class="px-[96px] flex space-x-[24px]">
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#E42F32] text-[32px] PF-sm">😞社交信任缺失</p>
+      <p class="text-black/60 text-[20px] PF-r">陌生人社交缺乏可信身份验证与情感联结载体，虚假身份与防御心理可能导致互动转化率持续走低。<br>
+        *例如，付费通话功能因缺乏身份认证导致转化瓶颈。</p>
+    </div>
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#E42F32] text-[32px] PF-sm">😞多场景体验割裂</p>
+      <p class="text-black/60 text-[20px] PF-r">功能场景的视觉与交互同质化造成认知混淆，不同设备环境中的操作断层加剧体验碎片化。<br>
+        *例如，房间页与首页视觉相似度高造成操作迷航。 </p>
+    </div>
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#E42F32] text-[32px] PF-sm">😕功能理性失衡</p>
+      <p class="text-black/60 text-[20px] PF-r">功能增长与堆砌导致情感体验缺失，用户决策路径模糊化，引发社交行为阻滞。<br>
+        *例如，新用户迷失在复杂的玩法中，反而不知道如何经营真实社交。</p>
+    </div>
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#E42F32] text-[32px] PF-sm">😕视觉熵增失控</p>
+      <p class="text-black/60 text-[20px] PF-r">业务快速扩张冲击设计系统稳定性，模块重复开发与规范失控导致系统性失衡。<br>
+        *例如，运营内容与用户生产比例失衡。</p>
+    </div>
+  </div>
+  <div class="px-[96px] pb-[24px] pt-[56px]">
+    <p class="PF-m text-[24px] text-[#808080]">我们如何...（How Might We...）</p>
+  </div>
+  <div class="mx-[96px] flex space-x-[24px]">
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何让陌生人快速确认真实身份并进行主动互动？</p>
+      <p class="text-black/60 text-[20px] PF-r">
+        · 如何建立可信互动基准？<br>
+        · 如何减少用户建立信任的成本？<br>
+        · 如何提供可控的安全社交环境？</p>
+    </div>
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何实现跨场景体验的无缝衔接，构建统一的交互心智模型？</p>
+      <p class="text-black/60 text-[20px] PF-r">
+        · 如何建立跨场景的认知导航模式？<br>
+        · 如何建立场景关联线索？<br>
+        · 如何保证多端场景的体验一致性？</p>
+    </div>
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何平衡情感化表达与功能效率的对抗性需求？</p>
+      <p class="text-black/60 text-[20px] PF-r">
+        · 如何平衡游戏化叙事与操作效率的矛盾？<br>
+        · 如何使学习过程符合心流曲线？</p>
+    </div>
+    <div
+      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
+      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何在功能迭代过程中维持系统的视觉秩序和可扩展性？</p>
+      <p class="text-black/60 text-[20px] PF-r">
+        · 如何实现基础要素弹性扩展？<br>
+        · 如何让新内容继承系统基因？<br>
+        · 如何使商业目标与设计秩序共生？</p>
+    </div>
+  </div>
+
+  <div class="px-[96px] pb-[24px] pt-[56px]">
+    <p class="PF-m text-[24px] text-[#808080]">GSM（点击下方卡片可展开查看详细GSM列表）</p>
+  </div>
+  <div class="mx-[96px] mb-[96px] flex space-x-[24px]">
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_1.png"
+      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+      <p class="text-[#000000] text-[32px] PF-sm">🎯建立可视化信任体系与低压力互动环境，延长用户社交行为。</p>
+      <p class="w-full text-center text-black/60 text-[20px] PF-r">
+        展开</p>
+    </div>
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_2.png"
+      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+      <p class="text-[#000000] text-[32px] PF-sm">🎯在复杂场景切换中维持用户的空间定位感与操作连贯性。</p>
+      <p class="w-full text-center text-black/60 text-[20px] PF-r">
+        展开</p>
+    </div>
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_3.png"
+      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+      <p class="text-[#000000] text-[32px] PF-sm">🎯构建既满足情感共鸣又保证决策效率的复合体验框架。</p>
+      <p class="w-full text-center text-black/60 text-[20px] PF-r">
+        展开</p>
+    </div>
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_4.png"
+      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+      <p class="text-[#000000] text-[32px] PF-sm">🎯构建可扩展的设计语言，平衡功能迭代与体验一致性。</p>
+      <p class="w-full text-center text-black/60 text-[20px] PF-r">
+        展开</p>
+    </div>
+  </div>
+
+  <div class="bg-[#F5F7FA] pt-[96px] pb-[48px] px-[96px]">
+    <p class="w-2/3 text-[48px] PF-sm colorful_title">根据研究结论，我设计了Byme的一级页初稿，并在部门内汇报与评选。最终，下述方案脱颖而出。</p>
+  </div>
+  <div class="bg-[#F5F7FA] px-[96px]">
+    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/idea.png">
   </div>
 
   <!-- 导航 -->
   <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
     <p class="text-[48px] PF-sm pt-[64px]">先看亮点。</p>
-    <!-- 按钮 
-    <div class="flex pt-[69.5px] space-x-[24px]">
-      <a href="#works" class="h-[56px] w-[56px]">
-        <div class="transition-all duration-500 ease-in-out transform hover:scale-110">
-          <img src="media/Byme/left.png">
-        </div>
-      </a>
-      <a href="#works" class="h-[56px] w-[56px]">
-        <div class="transition-all duration-500 ease-in-out transform hover:scale-110">
-          <img src="media/Byme/right.png">
-        </div>
-      </a>
-    </div>
-    -->
   </div>
 
   <!-- 先看亮点 -->
@@ -134,7 +290,7 @@
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_04.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/10.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        class="openModal mr-[24px] mb-[96px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_05.png">
       </div>
       <div class="w-[560px]">
@@ -154,13 +310,13 @@
     const closeModalButton = document.getElementById('closeModal');
     const progressContainer = document.getElementById('progress-container');
     const progressBar = document.getElementById('progress-bar');
-  
+
     // 通用打开模态框函数
     function openModal(imageSrc) {
       modalImage.src = imageSrc;
       modal.classList.add('active');
     }
-  
+
     // 为每个按钮添加点击事件
     document.querySelectorAll('.openModal').forEach(button => {
       button.addEventListener('click', () => {
@@ -168,33 +324,33 @@
         openModal(imageSrc); // 打开模态框并展示图片
       });
     });
-  
+
     // 点击关闭按钮和模态框外部关闭模态框
     closeModalButton.addEventListener('click', () => {
       modal.classList.remove('active');
     });
-  
+
     modal.addEventListener('click', (event) => {
       if (event.target === modal) {
         modal.classList.remove('active');
       }
     });
-  
+
     // 预加载图片并更新整体加载进度
     function preloadImages() {
       const externalImages = document.querySelectorAll('img'); // 所有 img 标签
       const imagesToLoad = [...externalImages].filter(img => img.src !== ''); // 过滤掉没有 src 的 img
       const totalImages = imagesToLoad.length;
       let loadedImages = 0;
-  
+
       progressContainer.style.display = 'block'; // 显示进度条
-  
+
       // 定义一个函数来更新进度
       const updateProgress = () => {
         loadedImages++;
         const progressPercentage = (loadedImages / totalImages) * 100;
         progressBar.style.width = progressPercentage + '%';
-  
+
         // 如果所有图片都加载完成，隐藏进度条
         if (loadedImages === totalImages) {
           setTimeout(() => {
@@ -202,72 +358,32 @@
           }, 500); // 延迟500ms再隐藏，以便用户看到完成的状态
         }
       };
-  
+
       // 加载外部图片
       imagesToLoad.forEach(img => {
         // 当图片加载成功后
         img.onload = updateProgress;
         img.src = img.src; // 触发浏览器去加载图片
       });
-  
+
       // 加载模态框内部的图片
       const modalImages = document.querySelectorAll('.openModal');
       modalImages.forEach(img => {
         const imageUrl = img.getAttribute('data-image');
         const imgElement = new Image();
-  
+
         // 当图片加载成功后
         imgElement.onload = updateProgress;  // 通过相同的方式更新进度
         imgElement.src = imageUrl; // 预加载模态框的图片
       });
     }
-  
+
     // 页面加载时调用预加载功能
     window.onload = preloadImages;
   </script>
-  
-  
 
-  <!-- 最后看看Byme诞生的故事 -->
-  <!-- 导航 -->
-  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
-    <p class="text-[48px] PF-sm pt-[64px]">最后看看Byme诞生的故事。</p>
-  </div>
-  <div class=" bg-white px-[96px] pt-[96px] flex space-x-[36px]">
-    <div class="w-2/3">
-      <p class="w-full text-[56px] PF-sm colorful_title">身处竞争激烈的出海社交市场，我们如何设计差异化的用户体验？</p>
-    </div>
-    <div class="w-1/3">
-      <p class="flex justify-end [18px] PF-r text-[#BFBFBF]">*鉴于保密协议，我无法向您提供PPT内的详细内容。</p>
-    </div>
-  </div>
-  <div class="px-[96px] py-[56px]">
-    <p class="PF-m text-[28px] text-[#808080]">在Byme诞生之前，我们针对台湾、香港、东南亚市场开展了数次市场和用户研究。<br>
-      这些研究持续了7天左右，我主要负责数据分析、竞品分析和撰写体验报告等部分。</p>
-  </div>
-  <div class="mb-[96px] mx-[96px] flex space-x-[96px]">
-    <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research1.png">
-      <p class="text-[#808080]">超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
-    </div>
-    <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research2.png">
-      <p class="text-[#808080]">涵盖约40款产品的竞品分析文档。我负责撰写了产品核心业务设计分析的部分。</p>
-    </div>
-    <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research3.png">
-      <p class="text-[#808080]">针对公司现运营产品展开了数据分析工作。基于重点功能的数据提出了设计建议。</p>
-    </div>
-  </div>
-  <div class="bg-[#F5F7FA] pt-[96px] pb-[48px] px-[96px]">
-    <p class="w-3/4 text-[28px] PF-m text-[#808080]">根据研究结论，我设计了Byme的一级页初稿。此外，我们邀请了8位潜在用户进行访谈，并在部门内汇报与评选。最终，下述方案脱颖而出。
-    </p>
-  </div>
-  <div class="bg-[#F5F7FA] px-[96px] pb-[96px]">
-    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/idea.png">
-  </div>
   <div class="bg-white pt-[96px] pb-[48px] px-[96px]">
-    <p class="w-3/4 text-[28px] PF-m text-[#808080]">在独立执行具体需求的过程中，我高度重视效率与质量的平衡。例如，我在流程、规范和对齐环节中做出了以下努力： </p>
+    <p class="w-3/4 text-[28px] PF-m text-[#808080]">此外，在自主学习和独立执行具体需求的过程中，我高度重视效率与质量的平衡。例如，我在流程、规范和对齐环节中做出了以下努力： </p>
   </div>
   <div class="mb-[96px] mx-[96px] flex space-x-[32px]">
     <div class="flex w-1/3 flex-col space-y-[24px]">
