--- a/byme.html
+++ b/byme.html
@@ -223,7 +223,8 @@
   </div>
 
   <div class="bg-[#F5F7FA] pt-[96px] pb-[48px] px-[96px]">
-    <p class="w-2/3 text-[48px] PF-sm colorful_title">根据研究结论，我设计了Byme的一级页初稿，并在部门内汇报与评选。最终，下述方案脱颖而出。</p>
+    <p class="w-2/3 text-[48px] PF-sm colorful_title">根据研究结论，我设计了Byme的一级页初稿。在下面，您可以看到我的设计如何回应上述GSM。
+    </p>
   </div>
   <div class="bg-[#F5F7FA] px-[96px]">
     <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/idea.png">
