--- a/super.html
+++ b/super.html
@@ -75,7 +75,8 @@
         </div>
     </div>
     <div>
-        <img class="w-full animate__animated animate__fadeIn" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/midea_content_cover.png">
+        <img class="w-full animate__animated animate__fadeIn"
+            src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/midea_content_cover.png">
     </div>
 
     <!-- Content -->
@@ -88,7 +89,7 @@
                 designed to measure the user experience of smart home products.</p>
             <p class="PF-r text-black/60 text-[24px]">The smart home field uses the SUPER model to build a UX metrics
                 model from five metrics: Satisfaction, Usability, Performance, Engagement, and Relevant. According to
-                the path of smart home use, IoT user characteristics, the level of experience in the beauty of the home
+                the path of smart home use, IoT user characteristics, the level of experience in the Meiju APP
                 to filter out the core indicators at all levels, and establish the appropriate UX model, and finally
                 output the user experience report, and once again feedback to the design team, to form a virtuous cycle.
             </p>
@@ -96,7 +97,7 @@
     </div>
     <div class="mt-[96px] px-[96px] flex">
         <div class="flex w-2/5">
-            <p class="PF-sm text-black text-[72px]">Process</p>
+            <p class="PF-sm text-black text-[72px]">Introduction</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
             <div class="flex space-x-[16px] items-center">
@@ -159,6 +160,25 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="my-[96px] px-[96px] flex">
+        <div class="flex w-2/5">
+            <p class="PF-sm text-black text-[72px]">Process</p>
+        </div>
+        <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
+            <div class="flex space-x-[16px] items-center">
+                <img class="w-[72px] h-[72px]" src="media/midea/icon_72_video.png">
+                <a href="https://www.figma.com/proto/MVsJuwDcj7stJFY3Z2LNF1/%E7%BE%8E%E7%9A%84%E7%BE%8E%E5%B1%85-%C2%B7-SUPER%E6%A8%A1%E5%9E%8B?page-id=0%3A1&node-id=1-2&p=f&viewport=620%2C74%2C0.05&t=cDknJnSSmzaTVQVV-1&scaling=contain&content-scaling=fixed"
+                    target="_blank" class="PF-sm text-[#006AFF] text-[32px] hover:underline">Click here to view the
+                    program introduction
+                    video.<br>
+                    单击此处阅览项目过程。</a>
+            </div>
+            <p class="PF-r text-black/60 text-[24px]">The project process included existing model research, interviews
+                with industry UX experts, interaction walk-throughs, model construction, and final validity confidence
+                analysis. You can learn more at the link above. If the link does not open correctly, please find my
+                email in the footer and contact me and I will send you the PDF file.</p>
         </div>
     </div>
 
