--- a/gafalib.html
+++ b/gafalib.html
@@ -118,9 +118,6 @@
             <p class="PF-sm text-black text-[72px]">Problem</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
-            <p class="PF-r text-black/60 text-[24px]">The work was very challenging, but that pushed me to learn more
-                than at any other internship.
-            </p>
             <div class="flex-col space-y-[24px]">
                 <div
                     class="flex-row space-y-[16px] bg-[#FFF2F2] rounded-[32px] border border-[#FFC2C2] px-[36px] py-[32px]">
@@ -172,7 +169,7 @@
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
             <p class="PF-sm text-black text-[32px]">To inform the design of the Smart Portal System, a comprehensive
-                research phase was implemented, which included:</p>
+                research phase was implemented. <a href="https://www.figma.com/proto/tVWvlkvCAGEh3qfnQ2Yal0/GAFAlib-%C2%B7-Research?page-id=0%3A1&node-id=1-2&p=f&viewport=556%2C-1064%2C0.19&t=891ovz5KBqSnrw0H-1&scaling=contain&content-scaling=fixed" target="_blank" class="text-[#853AFF] hover:underline">You can view the user research process by clicking here.</a></p>
             <ul class="ml-[24px] PF-r text-[24px] list-disc ">
                 <li><a class="text-black PF-sm">User Interviews: </a><a class="text-black/60">Conducting in-depth
                         interviews with students and staff to gather insights into their experiences and challenges.</a>
@@ -298,13 +295,11 @@
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
             <p class="PF-sm text-black text-[32px]">To ensure the successful implementation of the Smart Portal System, the following steps will be undertaken:</p>
             <ul class="ml-[24px] PF-r text-[24px] list-disc ">
-                <li><a class="text-black PF-sm">Prototype Testing: </a><a class="text-black/60">Conduct usability testing with real users to gather feedback and refine the design, focusing on addressing the identified frustrations.</a>
+                <li class="text-black/60">Supplement the design of the teacher's side and invite teachers to experience it and do usability testing.
                 </li>
-                <li><a class="text-black PF-sm">Development Phase: </a><a class="text-black/60">Collaborate with the development team to build the portal based on the final designs, ensuring all features are user-friendly and inclusive.</a>
+                <li class="text-black/60">Collaborate with the development team to build the portal based on the final designs, ensuring all features are user-friendly and inclusive.
                 </li>
-                <li><a class="text-black PF-sm">Launch and Marketing: </a><a class="text-black/60">Create a launch strategy to promote the portal to students and staff effectively, emphasizing how it addresses their needs and supports community building.</a>
-                </li>
-                <li><a class="text-black PF-sm">Post-Launch Evaluation: </a><a class="text-black/60">Monitor user engagement and gather feedback for ongoing improvements and feature enhancements, ensuring the platform evolves alongside user needs.</a>
+                <li class="text-black/60">Monitor user engagement and gather feedback for ongoing improvements and feature enhancements, ensuring the platform evolves alongside user needs.
                 </li>
             </ul>
         </div>
