--- a/byme.html
+++ b/byme.html
@@ -196,25 +196,25 @@
     <p class="PF-m text-[24px] text-[#808080]">GSM（点击下方卡片可展开查看详细GSM列表）</p>
   </div>
   <div class="mx-[96px] mb-[96px] flex space-x-[24px]">
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_1.png"
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_01.png"
       class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
       <p class="text-[#000000] text-[32px] PF-sm">🎯建立可视化信任体系与低压力互动环境，延长用户社交行为。</p>
       <p class="w-full text-center text-black/60 text-[20px] PF-r">
         展开</p>
     </div>
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_2.png"
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_02.png"
       class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
       <p class="text-[#000000] text-[32px] PF-sm">🎯在复杂场景切换中维持用户的空间定位感与操作连贯性。</p>
       <p class="w-full text-center text-black/60 text-[20px] PF-r">
         展开</p>
     </div>
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_3.png"
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_03.png"
       class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
       <p class="text-[#000000] text-[32px] PF-sm">🎯构建既满足情感共鸣又保证决策效率的复合体验框架。</p>
       <p class="w-full text-center text-black/60 text-[20px] PF-r">
         展开</p>
     </div>
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_4.png"
+    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_04.png"
       class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
       <p class="text-[#000000] text-[32px] PF-sm">🎯构建可扩展的设计语言，平衡功能迭代与体验一致性。</p>
       <p class="w-full text-center text-black/60 text-[20px] PF-r">
@@ -290,7 +290,7 @@
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_04.png">
       </div>
-      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/10.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/10_change.png"
         class="openModal mr-[24px] mb-[96px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_05.png">
       </div>
