--- a/super.html
+++ b/super.html
@@ -186,7 +186,7 @@
     <div class="bg-white text-[24px] PF-sm">
         <div class="flex justify-center p-[40px] text-[#808080]">
             <p>🎉感谢您看到这里！</p>
-            <a href="gafalib.html" target="_blank" class="text-black hover:underline ">点此浏览下一个项目：GAFAlib。</a>
+            <a href="xmind.html" target="_blank" class="text-black hover:underline ">点此浏览下一个项目：Xmind·AI</a>
         </div>
     </div>
 
