--- a/gafalib.html
+++ b/gafalib.html
@@ -169,7 +169,10 @@
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
             <p class="PF-sm text-black text-[32px]">To inform the design of the Smart Portal System, a comprehensive
-                research phase was implemented. <a href="https://www.figma.com/proto/tVWvlkvCAGEh3qfnQ2Yal0/GAFAlib-%C2%B7-Research?page-id=0%3A1&node-id=1-2&p=f&viewport=556%2C-1064%2C0.19&t=891ovz5KBqSnrw0H-1&scaling=contain&content-scaling=fixed" target="_blank" class="text-[#853AFF] hover:underline">You can view the user research process by clicking here.</a></p>
+                research phase was implemented. <a
+                    href="https://www.figma.com/proto/tVWvlkvCAGEh3qfnQ2Yal0/GAFAlib-%C2%B7-Research?page-id=0%3A1&node-id=1-2&p=f&viewport=556%2C-1064%2C0.19&t=891ovz5KBqSnrw0H-1&scaling=contain&content-scaling=fixed"
+                    target="_blank" class="text-[#853AFF] hover:underline">You can view the user research process by
+                    clicking here.</a></p>
             <ul class="ml-[24px] PF-r text-[24px] list-disc ">
                 <li><a class="text-black PF-sm">User Interviews: </a><a class="text-black/60">Conducting in-depth
                         interviews with students and staff to gather insights into their experiences and challenges.</a>
@@ -293,13 +296,17 @@
             <p class="PF-sm text-black text-[72px]">Next Steps</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
-            <p class="PF-sm text-black text-[32px]">To ensure the successful implementation of the Smart Portal System, the following steps will be undertaken:</p>
+            <p class="PF-sm text-black text-[32px]">To ensure the successful implementation of the Smart Portal System,
+                the following steps will be undertaken:</p>
             <ul class="ml-[24px] PF-r text-[24px] list-disc ">
-                <li class="text-black/60">Supplement the design of the teacher's side and invite teachers to experience it and do usability testing.
+                <li class="text-black/60">Supplement the design of the teacher's side and invite teachers to experience
+                    it and do usability testing.
                 </li>
-                <li class="text-black/60">Collaborate with the development team to build the portal based on the final designs, ensuring all features are user-friendly and inclusive.
+                <li class="text-black/60">Collaborate with the development team to build the portal based on the final
+                    designs, ensuring all features are user-friendly and inclusive.
                 </li>
-                <li class="text-black/60">Monitor user engagement and gather feedback for ongoing improvements and feature enhancements, ensuring the platform evolves alongside user needs.
+                <li class="text-black/60">Monitor user engagement and gather feedback for ongoing improvements and
+                    feature enhancements, ensuring the platform evolves alongside user needs.
                 </li>
             </ul>
         </div>
