--- a/index.html
+++ b/index.html
@@ -14,30 +14,29 @@
   <!-- Navbar -->
   <div class="bg-[#F6FAFD]">
     <nav class="flex justify-between w-full px-16 py-10 z-30 animate__animated animate__fadeInDown">
-        <div class="flex justify-normal w-1/3 space-x-8">
-            <a href="#works"
-                class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
-                    WORKS</button></a>
-            <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed"
-                target="_blank"
-                class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
-                    GALLERY</button></a>
-        </div>
-        <div class="flex justify-center w-1/3 h-auto">
-            <a href="#works" class="relative block h-[64px] w-[280px]">
-                <div
-                    class="h-full bg-cover bg-center transition-all duration-500 ease-in-out transform hover:scale-110">
-                    <img src="media/homepage_island_start.png">
-                </div>
-            </a>
-        </div>
-        <div class="flex justify-end w-1/3">
-          <a href="about.html" target="_blank"
-                class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>👀
-                    About Me</button></a>
-        </div>
+      <div class="flex justify-normal w-1/3 space-x-8">
+        <a href="#works"
+          class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
+            WORKS</button></a>
+        <a href="https://www.figma.com/proto/ide4uqnnv0sar0qPGG68Zv/Zack's-More-Works?page-id=0%3A1&node-id=1-1332&p=f&viewport=192%2C30%2C0.2&t=z0v4uU6qSHKAFnIs-1&scaling=min-zoom&content-scaling=fixed"
+          target="_blank"
+          class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>🖼
+            GALLERY</button></a>
+      </div>
+      <div class="flex justify-center w-1/3 h-auto">
+        <a href="#works" class="relative block h-[64px] w-[280px]">
+          <div class="h-full bg-cover bg-center transition-all duration-500 ease-in-out transform hover:scale-110">
+            <img src="media/homepage_island_start.png">
+          </div>
+        </a>
+      </div>
+      <div class="flex justify-end w-1/3">
+        <a href="about.html" target="_blank"
+          class="flex justify-center w-[178px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>👀
+            About Me</button></a>
+      </div>
     </nav>
-</div>
+  </div>
 
   <!-- Hero Section -->
   <div>
@@ -119,6 +118,22 @@
           </div>
         </div>
       </div>
+      <!-- Xmind -->
+      <div class="w-1/2 h-auto cursor-not-allowed">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
+          <a href="xmind.html" target="_blank">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_card_Xmind.png">
+          </a>
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="media/xmind/xmind_logo_44.png">
+            <p class="text-black PF-sm">Xmind·AI 概念设计</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="flex bg-[#F5FAFD]">
       <!-- gafalib -->
       <div class="w-1/2 h-auto">
         <div
@@ -133,22 +148,6 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="flex bg-[#F5FAFD]">
-      <!-- TimeSpon -->
-      <div class="w-1/2 h-auto cursor-not-allowed">
-        <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[40px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
-          <a>
-            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_timespon.png">
-          </a>
-          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
-            <img src="media/logo_time.png">
-            <p class="text-black PF-sm">TimeSpon <p class="text-black PF-r opacity-30">(Coming soon...)</p></p>
-          </div>
-        </div>
-      </div>
       <!-- compet -->
       <div class="w-1/2 h-auto cursor-not-allowed">
         <div
@@ -159,7 +158,9 @@
           </a>
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_compet.png">
-            <p class="text-black PF-sm">Compet <p class="text-black PF-r opacity-30">(Coming soon...)</p></p>
+            <p class="text-black PF-sm">Compet
+            <p class="text-black PF-r opacity-30">(Coming soon...)</p>
+            </p>
           </div>
         </div>
       </div>
